--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -78,6 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="163dp"
         android:layout_margin="8dp"
+        android:autofillHints=""
         android:focusedSearchResultHighlightColor="@color/Secondary"
         android:fontFamily="@font/poppins_bold"
         android:hint="@string/enter_description"
@@ -95,7 +96,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/previewImageView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:targetApi="upside_down_cake" />
 
     <Button
         android:id="@+id/cameraButton"
